# pos-tagging-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
pos_tagging_cli/: pos.py
