[tool.poetry]
name = "pos-tagging-cli"
version = "0.1.1"
description = ""
authors = ["Louie Lu <git@louie.lu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
nltk = "^3.7"
colorful = "^0.5.4"
zdict = "^5.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pt = "pos_tagging_cli.pos:main"
